internalAMS/force-app/main/default/objects/Asset__c/fields/Asset_Name__c.field-meta.xml
<CustomField>
    <fullName>Asset_Name__c</fullName>
    <label>Asset Name</label>
    <length>24</length>
    <type>Text</type>
</CustomField>