internalAMS/force-app/main/default/objects/Asset__c/fields/Asset_Status__c.field-meta.xml
<CustomField>
    <fullName>Asset_Status__c</fullName>
    <defaultValue>&quot;Not Assigned&quot;</defaultValue>
    <description>Here, we can know the asset status</description>
    <label>Asset Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Assigned</fullName>
                <default>true</default>
                <label>Not Assigned</label>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Under Maintenance</fullName>
            </value>
            <value>
                <fullName>Disposed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>