internalAMS/force-app/main/default/objects/Asset__c/fields/Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_Name__c</fullName>
    <label>Brand Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Godrej</fullName>
            </value>
            <value>
                <fullName>Usha</fullName>
            </value>
            <value>
                <fullName>Durian</fullName>
            </value>
            <value>
                <fullName>Pepperfry</fullName>
            </value>
            <value>
                <fullName>Nikamal</fullName>
            </value>
            <value>
                <fullName>Apple</fullName>
            </value>
            <value>
                <fullName>Asus</fullName>
            </value>
            <value>
                <fullName>Dell</fullName>
            </value>
            <value>
                <fullName>HP</fullName>
            </value>
            <value>
                <fullName>Lenovo</fullName>
            </value>
            <value>
                <fullName>Voltas</fullName>
            </value>
            <value>
                <fullName>Carrier</fullName>
            </value>
            <value>
                <fullName>Hitachi</fullName>
            </value>
            <value>
                <fullName>Lloyd</fullName>
            </value>
            <value>
                <fullName>Panasonic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>