internalAMS/force-app/main/default/objects/Asset__c/fields/Depreciation_Value__c.field-meta.xml
<CustomField>
    <fullName>Depreciation_Value__c</fullName>
    <label>Depreciation Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>