internalAMS/force-app/main/default/objects/Asset__c/fields/Equipments__c.field-meta.xml
<CustomField>
    <fullName>Equipments__c</fullName>
    <label>Equipments</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chair</fullName>
            </value>
            <value>
                <fullName>Table</fullName>
            </value>
            <value>
                <fullName>Cabinet Table</fullName>
            </value>
            <value>
                <fullName>Bookshelves</fullName>
            </value>
            <value>
                <fullName>Cabinets</fullName>
            </value>
            <value>
                <fullName>White Boards</fullName>
            </value>
            <value>
                <fullName>Monitor</fullName>
            </value>
            <value>
                <fullName>Laptop</fullName>
            </value>
            <value>
                <fullName>Printer</fullName>
            </value>
            <value>
                <fullName>Mouse</fullName>
            </value>
            <value>
                <fullName>Keyboard</fullName>
            </value>
            <value>
                <fullName>Fax Machine</fullName>
            </value>
            <value>
                <fullName>Projector</fullName>
            </value>
            <value>
                <fullName>Mobile Phone</fullName>
            </value>
            <value>
                <fullName>Tablet</fullName>
            </value>
            <value>
                <fullName>Data Storage Device</fullName>
            </value>
            <value>
                <fullName>Router</fullName>
            </value>
            <value>
                <fullName>Air conditioning units</fullName>
            </value>
            <value>
                <fullName>Heating systems</fullName>
            </value>
            <value>
                <fullName>Ventilation systems</fullName>
            </value>
            <value>
                <fullName>Thermostats</fullName>
            </value>
            <value>
                <fullName>Ducts</fullName>
            </value>
            <value>
                <fullName>Chillers</fullName>
            </value>
            <value>
                <fullName>Boilers</fullName>
            </value>
            <value>
                <fullName>Fans</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>