internalAMS/force-app/main/default/objects/Asset__c/fields/Last_Maintance_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Maintance_Date__c</fullName>
    <label>Last Maintenance Date</label>
    <type>Date</type>
</CustomField>