internalAMS/force-app/main/default/objects/Asset__c/fields/Next_Maintance_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Maintance_Date__c</fullName>
    <label>Next Maintenance Date</label>
    <type>Date</type>
</CustomField>