internalAMS/force-app/main/default/objects/Asset__c/fields/Purchased_Amount__c.field-meta.xml
<CustomField>
    <fullName>Purchased_Amount__c</fullName>
    <label>Purchased Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>