internalAMS/force-app/main/default/objects/Asset__c/fields/Skipped_Maintenances__c.field-meta.xml
<CustomField>
    <fullName>Skipped_Maintenances__c</fullName>
    <label>Skipped Maintenances</label>
    <type>TextArea</type>
</CustomField>