internalAMS/force-app/main/default/objects/Asset__c/fields/Software_Installed__c.field-meta.xml
<CustomField>
    <fullName>Software_Installed__c</fullName>
    <inlineHelpText>This field is for the Type of Software Installed in the Asset</inlineHelpText>
    <label>Software Installed</label>
    <length>24</length>
    <type>Text</type>
</CustomField>