internalAMS/force-app/main/default/objects/Asset__c/recordTypes/Digital_Assets.recordType-meta.xml
<RecordType>
    <fullName>Digital_Assets</fullName>
    <active>true</active>
    <label>Digital Assets</label>
</RecordType>