internalAMS/force-app/main/default/objects/Asset__c/recordTypes/HVAC_Assets.recordType-meta.xml
<RecordType>
    <fullName>HVAC_Assets</fullName>
    <active>true</active>
    <label>HVAC Assets</label>
</RecordType>