internalAMS/force-app/main/default/objects/Asset__c/recordTypes/Physical_Assets.recordType-meta.xml
<RecordType>
    <fullName>Physical_Assets</fullName>
    <active>true</active>
    <label>Physical Assets</label>
</RecordType>